--- a/4 Custom models and Complex architectures/3_vgg.ipynb
+++ b/4 Custom models and Complex architectures/3_vgg.ipynb
@@ -7,18 +7,18 @@
     "id": "GC7zSrbOWiz0"
    },
    "source": [
-    "# Week 4 Assignment: Create a VGG network"
+    "# Week 4 Assignment: VGG network"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this exercise, you will build a class that implements a [VGG network](https://towardsdatascience.com/vgg-neural-networks-the-next-step-after-alexnet-3f91fa9ffe2c) that can be trained to classify images. The model will look something like this:\n",
+    "In this notebook, we will build a class that implements a [VGG network](https://towardsdatascience.com/vgg-neural-networks-the-next-step-after-alexnet-3f91fa9ffe2c) that can be trained to classify images. The model will look something like this:\n",
     "\n",
     "<img src='VGG.png'>\n",
     "\n",
-    "It is primarily made up of a series of Conv2D layers followed by a softmax activated layers to classify the image. As you can see, this will be a handful and the code will look huge if you specify each layer individually. As shown in the lectures, you can instead use model subclassing to build complex architectures. You can encapsulate repeating parts of a network then reuse that code when building the final model. You will get to practice that in this exercise. Let's get started!"
+    "It is primarily made up of a series of Conv2D layers followed by a softmax activated layers to classify the image. As you can see, this will be a handful and the code will look huge if you specify each layer individually. As shown in the lectures, you can instead use model subclassing to build complex architectures. You can encapsulate repeating parts of a network then reuse that code when building the final model. we will get to practice that in this exercise. Let's get started!"
    ]
   },
   {
@@ -42,9 +42,9 @@
    "source": [
     "## Create named-variables dynamically\n",
     "\n",
-    "In this assignment, you will see the use of the Python function `vars()`.  This will allow you to use a for loop to define and set multiple variables with a similar name, such as var1, var2, var3.  \n",
+    "In this assignment, we will see the use of the Python function `vars()`.  This will allow you to use a for loop to define and set multiple variables with a similar name, such as var1, var2, var3.  \n",
     "\n",
-    "Please go through the following examples to get familiar with `vars()`, as you will use it when building the VGG model.\n",
+    "Please go through the following examples to get familiar with `vars()`, as we will use it when building the VGG model.\n",
     "- You'll start by defining a class `MyClass`\n",
     "- It contains one variable `var1`.  \n",
     "- Create an object of type `MyClass`."
@@ -313,7 +313,7 @@
     "id": "k1T1UMw5YAkp"
    },
    "source": [
-    "## Create a generic VGG block (TODO)\n",
+    "## Create a generic VGG block \n",
     "\n",
     "The VGG Network has blocks of layers, where each block has a varied number of layers.\n",
     "- In order to create blocks of layers that have a customizable number of conv2D layers, you'll define a class `Block`, which can generate a customizable block of layers \n",
@@ -336,7 +336,7 @@
     "        - strides: this will also be a tuple with two values.\n",
     "\n",
     "### `call`\n",
-    "In `call`, you will connect the layers together.\n",
+    "In `call`, we will connect the layers together.\n",
     "- The 0-th conv2D layer, `conv2D_0`, immediately follows the `inputs`.\n",
     "- For conv2D layers 1,2 and onward, you can use a for loop to connect conv2D_1 to conv2D_0, and connect conv2D_2 to conv2D_1, and so on.\n",
     "- After connecting all of the conv2D_i layers, add connect the max_pool layer and return the max_pool layer."
@@ -363,11 +363,6 @@
    },
    "outputs": [],
    "source": [
-    "# Please uncomment all lines in this cell and replace those marked with `# YOUR CODE HERE`.\n",
-    "# You can select all lines in this code cell with Ctrl+A (Windows/Linux) or Cmd+A (Mac), then press Ctrl+/ (Windows/Linux) or Cmd+/ (Mac) to uncomment.\n",
-    "\n",
-    "\n",
-    "\n",
     "class Block(tf.keras.Model):\n",
     "    def __init__(self, filters, kernel_size, repetitions, pool_size=2, strides=2):\n",
     "        super(Block, self).__init__()\n",
@@ -414,44 +409,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "4027611c9615b1f518a95d76a81bc8d1",
-     "grade": true,
-     "grade_id": "cell-2911e521bce8793b",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[92m All public tests passed\n"
-     ]
-    }
-   ],
-   "source": [
-    "utils.test_block_class(Block)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "peM2GP6uYT0U"
    },
    "source": [
-    "## Create the Custom VGG network (TODO)\n",
+    "## Create the Custom VGG network \n",
     "This model stack has a series of VGG blocks, which can be created using the `Block` class that you defined earlier.\n",
     "\n",
     "### `__init__`\n",
@@ -506,11 +470,6 @@
    },
    "outputs": [],
    "source": [
-    "# Please uncomment all lines in this cell and replace those marked with `# YOUR CODE HERE`.\n",
-    "# You can select all lines in this code cell with Ctrl+A (Windows/Linux) or Cmd+A (Mac), then press Ctrl+/ (Windows/Linux) or Cmd+/ (Mac) to uncomment.\n",
-    "\n",
-    "\n",
-    "\n",
     "class MyVGG(tf.keras.Model):\n",
     "\n",
     "    def __init__(self, num_classes):\n",
@@ -549,38 +508,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "c72733dcd5baccf2728b5b2460caf515",
-     "grade": true,
-     "grade_id": "cell-559ac19437f4f2b2",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[92m All public tests passed\n"
-     ]
-    }
-   ],
-   "source": [
-    "utils.test_myvgg_class(MyVGG, Block)\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -590,7 +517,7 @@
     "\n",
     "The next steps in the pipeline will be loading the dataset and training your VGG network. The code is shown below but it is only for reference and is **not required to complete the assignment**. Please do not uncomment it because it will cause a grader timeout because of the slow training time. The grader environment does not have an accelerator enabled.\n",
     "\n",
-    "If you want to train with your VGG network, one way is to download your notebook (`File -> Download As -> Notebook`), then upload to [Colab](https://colab.research.google.com). From there, you can use a GPU runtime (`Runtime -> Change Runtime type`) prior to running the cells. Just make sure **to comment out the imports and calls to `utils.py`** so you don't get `File Not Found` errors. Again, this part is only for reference and is not required for grading. For this lab, we will only grade how you built your model using subclassing. You will get to training and evaluating your models in the next courses of this Specialization."
+    "If you want to train with your VGG network, one way is to download your notebook (`File -> Download As -> Notebook`), then upload to [Colab](https://colab.research.google.com). From there, you can use a GPU runtime (`Runtime -> Change Runtime type`) prior to running the cells. Just make sure **to comment out the imports and calls to `utils.py`** so you don't get `File Not Found` errors. Again, this part is only for reference and is not required for grading. For this lab, we will only grade how you built your model using subclassing. we will get to training and evaluating your models in the next courses of this Specialization."
    ]
   },
   {
