--- a/4 Custom models and Complex architectures/2_resnet-implementation.ipynb
+++ b/4 Custom models and Complex architectures/2_resnet-implementation.ipynb
@@ -16,12 +16,12 @@
    "source": [
     "# Implementing ResNet\n",
     "\n",
-    "In this lab, you will continue exploring Model subclassing by building a more complex architecture. \n",
+    "In this notebook, we will continue exploring Model subclassing by building a more complex architecture. \n",
     "\n",
     "[Residual Networks](https://arxiv.org/abs/1512.03385) make use of skip connections to make deep models easier to train. \n",
     "- There are branches as well as many repeating blocks of layers in this type of network. \n",
     "- You can define a model class to help organize this more complex code, and to make it easier to re-use your code when building the model.\n",
-    "- As before, you will inherit from the [Model class](https://keras.io/api/models/model/) so that you can make use of the other built-in methods that Keras provides."
+    "- As before, we will inherit from the [Model class](https://keras.io/api/models/model/) so that you can make use of the other built-in methods that Keras provides."
    ]
   },
   {
@@ -58,7 +58,7 @@
    "source": [
     "## Implement Model subclasses\n",
     "\n",
-    "As shown in the lectures, you will first implement the Identity Block which contains the skip connections (i.e. the `add()` operation below. This will also inherit the Model class and implement the `__init__()` and `call()` methods."
+    "As shown in the lectures, we will first implement the Identity Block which contains the skip connections (i.e. the `add()` operation below. This will also inherit the Model class and implement the `__init__()` and `call()` methods."
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "source": [
     "From there, you can build the rest of the ResNet model. \n",
-    "- You will call your `IdentityBlock` class two times below and that takes care of inserting those blocks of layers into this network."
+    "- we will call your `IdentityBlock` class two times below and that takes care of inserting those blocks of layers into this network."
    ]
   },
   {
